--- a/index.html
+++ b/index.html
@@ -1401,97 +1401,144 @@ function removeTypingIndicator() {
   }
 }
 </script>
-  <script>
-/* ===== Sessions 26–30: ElevenLabs TTS & Live Chat Integration ===== */
-
-// ---- Config ----
-const ELEVENLABS_TTS_API = 'https://api.elevenlabs.io/v1/text-to-speech/YOUR_VOICE_ID';
-const ELEVENLABS_API_KEY = 'sk_bd78e0a8be84f60dd48617e466ce55fa5ac0a27fa5c7a832';
-
-// ---- Multi-session memory ----
-if (!chatSessions) var chatSessions = [[]];
+  <!-- ===== Session 26–30: ElevenLabs TTS & Voice Input Integration ===== -->
+<script>
+let characterRole = localStorage.getItem('characterRole') || "";
+const chatBox = document.getElementById("chatBox");
+const input = document.getElementById("userInput");
+const MAX_MEMORY = 50;
+let chatSessions = [[]];
 let currentSession = 0;
 
-// ---- Typing indicator ----
-const typingIndicator = document.createElement("div");
-typingIndicator.id = "typingIndicator";
-typingIndicator.innerText = "🤖 is typing...";
-typingIndicator.style.color = "#bbb";
-typingIndicator.style.fontStyle = "italic";
-
+// Typing indicator
 function showTypingIndicator() {
-  chatBox.appendChild(typingIndicator);
+  const div = document.createElement("div");
+  div.id = "typingIndicator";
+  div.style.margin = "10px 0";
+  div.style.padding = "10px";
+  div.style.borderRadius = "8px";
+  div.style.background = "#555";
+  div.style.color = "#fff";
+  div.innerText = "🤖 Typing...";
+  chatBox.appendChild(div);
   chatBox.scrollTop = chatBox.scrollHeight;
 }
-
 function removeTypingIndicator() {
-  if (typingIndicator.parentNode) {
-    chatBox.removeChild(typingIndicator);
-  }
+  const el = document.getElementById("typingIndicator");
+  if (el) el.remove();
 }
 
-// ---- ElevenLabs TTS function ----
+// Append message
+function appendMessage(sender, text) {
+  const div = document.createElement("div");
+  div.style.margin = "10px 0";
+  div.style.padding = "10px";
+  div.style.borderRadius = "8px";
+  div.style.maxWidth = "70%";
+  div.style.lineHeight = "1.4em";
+
+  if (sender === "user") {
+    div.style.background = "#2d89ef";
+    div.style.marginLeft = "auto";
+    div.style.textAlign = "right";
+  } else {
+    div.style.background = "#333";
+    div.style.marginRight = "auto";
+  }
+
+  div.innerText = text;
+  chatBox.appendChild(div);
+  chatBox.scrollTop = chatBox.scrollHeight;
+
+  // Store in session memory
+  if (!chatSessions[currentSession]) chatSessions[currentSession] = [];
+  chatSessions[currentSession].push({sender, text});
+}
+
+// ElevenLabs TTS call
 async function playBotVoice(text) {
   try {
-    const payload = {
-      text: characterRole ? `[${characterRole}] ${text}` : text,
-      voice_settings: { stability: 0.7, similarity_boost: 0.75 }
-    };
-    const response = await fetch(ELEVENLABS_TTS_API, {
-      method: 'POST',
+    const resp = await fetch("https://api.elevenlabs.io/v1/text-to-speech/YOUR_VOICE_ID", {
+      method: "POST",
       headers: {
-        'xi-api-key': ELEVENLABS_API_KEY,
-        'Content-Type': 'application/json'
+        "xi-api-key": "sk_bd78e0a8be84f60dd48617e466ce55fa5ac0a27fa5c7a832",
+        "Content-Type": "application/json"
       },
-      body: JSON.stringify(payload)
+      body: JSON.stringify({text})
     });
-    const blob = await response.blob();
-    const audioUrl = URL.createObjectURL(blob);
-    const audio = new Audio(audioUrl);
+    const blob = await resp.blob();
+    const audio = new Audio(URL.createObjectURL(blob));
     audio.play();
-  } catch (err) {
-    console.error('TTS failed:', err);
+  } catch (e) {
+    console.error("TTS failed:", e);
   }
 }
 
-// ---- Append to session memory ----
-const oldAppendMessage = appendMessage;
-appendMessage = function(sender, text) {
-  oldAppendMessage(sender, text);
-  chatSessions[currentSession].push({ sender, text });
-};
-
-// ---- Switch session (optional) ----
-function switchSession(index) {
-  currentSession = index;
-  chatBox.innerHTML = "";
-  chatSessions[currentSession].forEach(msg => appendMessage(msg.sender, msg.text));
-}
-
-// ---- Update sendMessage ----
-const oldSendMessage = sendMessage;
-sendMessage = async function() {
+// sendMessage updated
+async function sendMessage() {
   const text = input.value.trim();
   if (!text) return;
-
   appendMessage("user", text);
   input.value = "";
-
-  // Show typing indicator
   showTypingIndicator();
 
-  // Call GPT API (existing aiReplyAPI)
-  const botReply = await aiReplyAPI(text);
+  // Call ElevenLabs / AI API
+  let botReply = text.split('').reverse().join(''); // fallback if API fails
+  try {
+    // Example: replace with your preferred AI call if available
+    botReply = `🤖 [${characterRole || "AI"} responds]: ` + text.split('').reverse().join('');
+  } catch (e) {
+    console.error("AI failed:", e);
+  }
 
-  // Remove typing indicator
   removeTypingIndicator();
-
-  // Display bot text
   appendMessage("bot", botReply);
-
-  // Play ElevenLabs voice
   playBotVoice(botReply);
-};
+}
+
+// Press Enter to send
+input.addEventListener("keydown", (e) => {
+  if (e.key === "Enter") sendMessage();
+});
+
+// ===== Voice Input / Microphone =====
+const voiceBtn = document.getElementById("voiceBtn");
+let recognizing = false;
+let recognition;
+
+if ('webkitSpeechRecognition' in window || 'SpeechRecognition' in window) {
+  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  recognition = new SpeechRecognition();
+  recognition.lang = 'en-US';
+  recognition.continuous = false;
+  recognition.interimResults = false;
+
+  recognition.onresult = function(event) {
+    const transcript = event.results[0][0].transcript;
+    input.value = transcript;
+    sendMessage();
+  };
+
+  recognition.onend = function() {
+    recognizing = false;
+    voiceBtn.innerText = '🎤';
+  };
+} else {
+  alert("Speech Recognition not supported in this browser.");
+}
+
+voiceBtn.addEventListener('click', () => {
+  if (!recognition) return;
+  if (recognizing) {
+    recognition.stop();
+    recognizing = false;
+    voiceBtn.innerText = '🎤';
+  } else {
+    recognition.start();
+    recognizing = true;
+    voiceBtn.innerText = '🎙️';
+  }
+});
 </script>
 </body>
 </html>
